Finally fixed text align issue

--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,13 @@ footer p{
 #prevLogin p{
   color: black;
 }
-#test{
-  color: white;
+#test img{
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 5px;
+}
+#test span{
+  margin-top: 15px;
 }
 #storeLogos{
   display: flex;
